tests/base/valid/ConstrainedList_Valid_5.whiley
import * from whiley.lang.*

string f():
    return ""

void ::main(System.Console sys,[string] args):
    sys.out.println(f())
